--- a/module2_solution/css/module2.css
+++ b/module2_solution/css/module2.css
@@ -1,7 +1,6 @@
 body{
     font-family: 'Times New Roman', Times, serif;
     background-color: thistle;
-    margin: 0px;
 }
 h1{
    text-align: center;
@@ -10,19 +9,15 @@ h1{
 
 }
 main{
-  padding: 10px;
+   content: "";
+  display: table;
+  clear: both;
 }
-.main-sec{
-   margin: 60px;
-   align-items: flex-end;
-}
-.section{
+
+div{
    float: left;
-   margin: 30px;
-}
-.div1{
-   padding: 20px;
-   width: 360px;
+  width: 30.33%;
+  padding: 20px;
    border: rosybrown;
    border-style: double;
    text-align: center;
@@ -32,11 +27,10 @@ h4{
    text-decoration-color: salmon;
 }
 span > h4{
-   margin-left: -30px;
    float: right;
-   width: 30%;
+   width: 40%;
    background-color: slateblue;
-   padding: 8px 8px 8px 8px;
+   padding: 8px;
    text-align: center;
    margin: -20px;
    border:solid 1px;
