--- a/module2_solution/css/module2.css
+++ b/module2_solution/css/module2.css
@@ -1,19 +1,20 @@
 body{
     font-family: 'Times New Roman', Times, serif;
-    background-color: thistle;
+    background-color: rgba(9, 145, 43, 0.479);
 }
 
 h1{
    text-align: center;
    color: aquamarine;
-   font-size: 40px;
+   font-size: 50px;
+   margin: 10px;
 
 }
 
-div{  
+dv{  
    border: rosybrown;
    border-style: double;
-   background-color: sandybrown;
+   background-color: gray;
 } 
 
 * {
@@ -21,7 +22,7 @@ div{
 }
 
 /* Create three equal columns that floats next to each other */
-.column {
+column {
   float: left;
   width: 33.33%;
   padding: 10px;
@@ -29,27 +30,66 @@ div{
 }
 
 /* Clear floats after the columns */
-.row:after {
+row:after {
   content: "";
   padding: 10px;
   display: table;
   clear: both;
 }
 
-h4{
-   text-decoration-color: salmon;
-}
  span > h4 {
    float: right;
    width: 30%;
    height: 35px;
-   background-color: slateblue;
+   background-color:#aaf;
    padding: 9px;
    text-align: center;
    margin-top: -5px;
    border: solid px;
 } 
 
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
 marquee{
    font-size: 20px;
 }
