second article updated

--- a/module2_solution/css/module2.css
+++ b/module2_solution/css/module2.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Times New Roman', Times, serif;
     background-color: rgba(9, 145, 43, 0.479);
+    display: block;
 }
 
 h1{
@@ -14,27 +15,10 @@ h1{
 dv{  
    border: rosybrown;
    border-style: double;
-   background-color: gray;
 } 
 
 * {
   box-sizing: border-box;
-}
-
-/* Create three equal columns that floats next to each other */
-column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  height: 100%; /* Should be removed. Only for demonstration */
-}
-
-/* Clear floats after the columns */
-row:after {
-  content: "";
-  padding: 10px;
-  display: table;
-  clear: both;
 }
 
  span > h4 {
@@ -65,7 +49,7 @@ body {
 }
 
 /* Remove extra left and right margins, due to padding in columns */
-.row {margin: 0 -5px;}
+.row {margin: 0px;}
 
 /* Clear floats after the columns */
 .row:after {
