--- a/module3_solution/mod.css
+++ b/module3_solution/mod.css
@@ -14,6 +14,9 @@
 h1 {
     margin-top: 40px;
 }
+pre{
+	width: 20%;
+}
 
 #content-div-1, #content-div-2, #content-div-3 {
     background-color: rgb(95, 93, 88);
